Javadoc finally builds (under JDK 12).