@@ -87,7 +87,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.0</version>
+					<version>2.22.1</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-antrun-plugin</artifactId>
@@ -173,6 +173,25 @@
 					</compilerArgs>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>default-cli</id>
+						<goals>
+							<goal>aggregate</goal>
+						</goals>
+						<!-- Reminder: Use "-pl !test,!benchmark" to exclude test modules -->
+						<configuration>
+							<additionalOptions>
+								<option>--add-modules</option>
+								<option>java.xml</option>
+							</additionalOptions>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<properties>
@@ -183,7 +202,7 @@
 		<slf4j.version>1.8.0-beta2</slf4j.version>
 		<logback.version>1.3.0-alpha4</logback.version>
 		<testng.version>6.14.3</testng.version>
-		<pouch.version>1.13</pouch.version>
+		<pouch.version>1.14-SNAPSHOT</pouch.version>
 	</properties>
 
 	<profiles>
